# Nectar

./: CMakeLists.txt  PRIVACY.md  README.md  io.github.DevNull-l1r.exeexecutor.desktop  io.github.DevNull-l1r.exeexecutor.metainfo.xml  io.github.DevNull_l1r.exeexecutor.yml  mainwindow.cpp  mainwindow.h
distribution/: io.github.devnull_l1r.exe_executor.yml  io.github.devnull_l1r.nectar.desktop  io.github.devnull_l1r.nectar.metainfo.xml  io.github.devnull_l1r.nectar.yml
